feat(swagger): Added new annotations for Login, Logout and Validate routes (NEED FIX)
