# pkg/handler/response.go
@@ -8,3 +8,10 @@ type LoginResponse struct {
 	AccessToken  string `json:"accessToken"`
 	RefreshToken string `json:"refreshToken"`
 }
+
+type LogoutResponse struct {
+}
+
+type ValidateResponse struct {
+	Login string `json:"login"`
+}
